Add chai link to index

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <p><a href="./Recipes</p>
+        <p><a href="./recipes/chai.html">Chai Tea Recipe!</a></p>
     </body>
 </html>
