Add description to chai webpage
Added an image of chai tea as well necessary ingredients.
Created a directory to store the image as well as future
images.

--- a/recipes/chai.html
+++ b/recipes/chai.html
@@ -8,5 +8,19 @@
 </head>
 <body>
     <h1>Chai Tea Recipe</h1>
+    <img src="./images/chai.jpg">
+    <p>
+        A lovely chai tea latte to start your day off.
+        It tastes wonderful and is my absolute favorite 
+        to make.
+    </p>
+    <p>
+        <h3>Ingrediets</h3>
+        <ul>
+            <li>Tazo Chai Tea Concentrate</li>
+            <li>Milk</li>
+            <li>Ice <em>(If desired)</em></li>
+        </ul>
+    </p>
 </body>
 </html>
