--- a/recipes/chai.html
+++ b/recipes/chai.html
@@ -22,5 +22,14 @@
             <li>Ice <em>(If desired)</em></li>
         </ul>
     </p>
+    <p>
+        <h3>Steps</h3>
+        <ol>
+            <li>Pour half a cup of tea</li>
+            <li>Pour half a cup of milk</li>
+            <li>Pour over ice</li>
+            <li>Enjoy!!</li>
+        </ol>
+    </p>
 </body>
 </html>
