--- a/recipes/chai.html
+++ b/recipes/chai.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Chai Tea Recipe</h1>
-    <img src="./images/chai.jpg">
+    <img src="./images/chai.jpg" alt="A picture of a chai
+    tea latte">
     <p>
         A lovely chai tea latte to start your day off.
         It tastes wonderful and is my absolute favorite 
