Change recipes to list format

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <p><a href="./recipes/chai.html">Chai Tea Recipe!</a></p>
+        <p>
+        <ul>
+            <li><a href="./recipes/chai.html">Chai Tea Recipe!</a></li>
+        </ul>
+        </p>
     </body>
 </html>
