--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <p>
         <ul>
             <li><a href="./recipes/chai.html">Chai Tea Recipe!</a></li>
+            <li><a href="./recipes/chicken.html">Chicken Recipe!</a></li>
         </ul>
         </p>
     </body>
