--- a/recipes/fried-rice.html
+++ b/recipes/fried-rice.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1>Fried Rice</h1>
+        <img src = "images/fried-rice.jpg" alt = "A picture of fried rice">
         
     </body>
 </html>
