--- a/recipes/fried-rice.html
+++ b/recipes/fried-rice.html
@@ -8,6 +8,18 @@
     <body>
         <h1>Fried Rice</h1>
         <img src = "images/fried-rice.jpg" alt = "A picture of fried rice">
-        
+        <h3>Ingredients</h3>
+        <ul>
+            <li>Rice</li>
+            <li>Olive oil</li>
+            <li>Eggs</li>
+            <li>Any vegetables you want</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>Cook eggs</li>
+            <li>Add rice</li>
+            <li>Enjoy!!</li>
+        </ol>
     </body>
 </html>
