Add paragraph dividers

--- a/recipes/fried-rice.html
+++ b/recipes/fried-rice.html
@@ -8,6 +8,10 @@
     <body>
         <h1>Fried Rice</h1>
         <img src = "images/fried-rice.jpg" alt = "A picture of fried rice">
+        <p>
+            Traditional fried rice your asian parents whip up.
+        </p>
+        <p>
         <h3>Ingredients</h3>
         <ul>
             <li>Rice</li>
@@ -15,11 +19,14 @@
             <li>Eggs</li>
             <li>Any vegetables you want</li>
         </ul>
+        </p>
+        <p>
         <h3>Steps</h3>
         <ol>
             <li>Cook eggs</li>
             <li>Add rice</li>
             <li>Enjoy!!</li>
         </ol>
+        </p>
     </body>
 </html>
