--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <ul>
             <li><a href="./recipes/chai.html">Chai Tea Recipe!</a></li>
             <li><a href="./recipes/chicken.html">Chicken Recipe!</a></li>
+            <li><a href="./recipes/fried-rice.html">Fried Rice Recipe!</a></li>
         </ul>
         </p>
     </body>
